// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkImpact handles charts data disabled 1`] = `
<DocumentFragment>
  .c1 {
  height: 100%;
  width: 100%;
}

.c1 .ant-card {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 8px;
}

.c1 .ant-card-head {
  padding: 0;
  border-bottom: none;
  min-height: 0;
  margin-bottom: 10px;
}

.c1 .ant-card-head-title {
  padding: 0;
}

.c1 .ant-card-head-title .ant-space .ant-space-item:last-child {
  line-height: 0;
}

.c1 .ant-card-head-wrapper {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c1 .ant-card-extra {
  padding: 0;
}

.c1 .ant-card-body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c2 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-headline-4-font-weight-bold);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c3 {
  width: 1280px;
  word-break: break-word;
  text-align: center;
  margin-block-start: 5px;
  padding: 0px calc(1280px * 0.18);
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-subtitle-6-font-size);
  line-height: var(--acx-subtitle-6-line-height);
  font-weight: var(--acx-subtitle-6-font-weight);
}

.c0 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
      type="no-border"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              <div
                class="c2"
              >
                Network Impact
              </div>
            </div>
            <div
              class="ant-card-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              />
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            class="ant-row"
          >
            <div
              class="ant-col ant-col-6"
              style="height: 200px;"
            >
              <div
                style="overflow: visible; height: 0px; width: 0px;"
              >
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      _echarts_instance_="ec_mock"
                      class="echarts-for-react "
                      size-sensor-id="10"
                      style="height: 770px; width: 1280px; position: relative;"
                    >
                      <div
                        style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
                      >
                        <svg
                          baseProfile="full"
                          height="800"
                          style="position:absolute;left:0;top:0;user-select:none"
                          version="1.1"
                          width="1280"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <rect
                            fill="none"
                            fill-opacity="1"
                            height="800"
                            id="0"
                            width="1280"
                            x="0"
                            y="0"
                          />
                          <g>
                            <path
                              d="M640 32A368 368 0 1 1 639.9632 32M640 88A312 312 0 1 0 640.0312 88Z"
                              fill="#66B1E8"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M-45 -5l54.5 0l0 50l-54.5 0Z"
                              fill="rgb(0,0,0)"
                              fill-opacity="0"
                              stroke="#ccc"
                              stroke-width="0"
                              transform="translate(640 380)"
                            />
                            <path
                              d="M-4.5 0l9 0l0 16l-9 0Z"
                              fill="none"
                              transform="translate(640 380)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:12px;font-family:'Open Sans', sans-serif;font-weight:400;"
                              text-anchor="middle"
                              transform="translate(640 380)"
                              xml:space="preserve"
                              y="8"
                            >
                              Rogue APs
                            </text>
                            <path
                              d="M-1 20l2 0l0 20l-2 0Z"
                              fill="none"
                              transform="translate(640 380)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:16px;font-family:'Montserrat', sans-serif;font-weight:600;"
                              text-anchor="middle"
                              transform="translate(640 380)"
                              y="30"
                            >
                              10
                            </text>
                          </g>
                        </svg>
                      </div>
                      <div
                        class=""
                      />
                      <object
                        class="size-sensor-object"
                        data="about:blank"
                        style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
                        tabindex="-1"
                        type="text/html"
                      />
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="c3"
                      width="1280"
                    >
                      10 rogue APs in Channel 00:00:00:00:00:00
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="resize-triggers"
              >
                <div
                  class="expand-trigger"
                >
                  <div
                    style="width: 1281px; height: 801px;"
                  />
                </div>
                <div
                  class="contract-trigger"
                />
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="height: 200px;"
            >
              <div
                style="overflow: visible; height: 0px; width: 0px;"
              >
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      _echarts_instance_="ec_mock"
                      class="echarts-for-react "
                      size-sensor-id="11"
                      style="height: 770px; width: 1280px; position: relative;"
                    >
                      <div
                        style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
                      >
                        <svg
                          baseProfile="full"
                          height="800"
                          style="position:absolute;left:0;top:0;user-select:none"
                          version="1.1"
                          width="1280"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <rect
                            fill="none"
                            fill-opacity="1"
                            height="800"
                            id="0"
                            width="1280"
                            x="0"
                            y="0"
                          />
                          <g>
                            <path
                              d="M640 32A368 368 0 1 1 639.9632 32M640 88A312 312 0 1 0 640.0312 88Z"
                              fill="#66B1E8"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M-45 -5l56.5 0l0 50l-56.5 0Z"
                              fill="rgb(0,0,0)"
                              fill-opacity="0"
                              stroke="#ccc"
                              stroke-width="0"
                              transform="translate(640 380)"
                            />
                            <path
                              d="M-6.5 0l13 0l0 16l-13 0Z"
                              fill="none"
                              transform="translate(640 380)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:12px;font-family:'Open Sans', sans-serif;font-weight:400;"
                              text-anchor="middle"
                              transform="translate(640 380)"
                              xml:space="preserve"
                              y="8"
                            >
                              Rx PHY Errors
                            </text>
                            <path
                              d="M-1 20l2 0l0 20l-2 0Z"
                              fill="none"
                              transform="translate(640 380)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:16px;font-family:'Montserrat', sans-serif;font-weight:600;"
                              text-anchor="middle"
                              transform="translate(640 380)"
                              y="30"
                            >
                              10
                            </text>
                          </g>
                        </svg>
                      </div>
                      <div
                        class=""
                      />
                      <object
                        class="size-sensor-object"
                        data="about:blank"
                        style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
                        tabindex="-1"
                        type="text/html"
                      />
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="c3"
                      width="1280"
                    >
                      00:00:00:00:00:00 has the highest Rx PHY errors
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="resize-triggers"
              >
                <div
                  class="expand-trigger"
                >
                  <div
                    style="width: 1281px; height: 801px;"
                  />
                </div>
                <div
                  class="contract-trigger"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkImpact handles charts data with total & disabled 1`] = `
<DocumentFragment>
  .c1 {
  height: 100%;
  width: 100%;
}

.c1 .ant-card {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 8px;
}

.c1 .ant-card-head {
  padding: 0;
  border-bottom: none;
  min-height: 0;
  margin-bottom: 10px;
}

.c1 .ant-card-head-title {
  padding: 0;
}

.c1 .ant-card-head-title .ant-space .ant-space-item:last-child {
  line-height: 0;
}

.c1 .ant-card-head-wrapper {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c1 .ant-card-extra {
  padding: 0;
}

.c1 .ant-card-body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c2 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-headline-4-font-weight-bold);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c3 {
  width: 1280px;
  word-break: break-word;
  text-align: center;
  margin-block-start: 5px;
  padding: 0px calc(1280px * 0.18);
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-subtitle-6-font-size);
  line-height: var(--acx-subtitle-6-line-height);
  font-weight: var(--acx-subtitle-6-font-weight);
}

.c0 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
      type="no-border"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              <div
                class="c2"
              >
                Network Impact
              </div>
            </div>
            <div
              class="ant-card-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              />
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            class="ant-row"
          >
            <div
              class="ant-col ant-col-6"
              style="height: 200px;"
            >
              <div
                style="overflow: visible; height: 0px; width: 0px;"
              >
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      _echarts_instance_="ec_mock"
                      class="echarts-for-react "
                      size-sensor-id="8"
                      style="height: 770px; width: 1280px; position: relative;"
                    >
                      <div
                        style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
                      >
                        <svg
                          baseProfile="full"
                          height="800"
                          style="position:absolute;left:0;top:0;user-select:none"
                          version="1.1"
                          width="1280"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <rect
                            fill="none"
                            fill-opacity="1"
                            height="800"
                            id="0"
                            width="1280"
                            x="0"
                            y="0"
                          />
                          <g>
                            <path
                              d="M640 32A368 368 0 1 1 639.9632 32M640 72A328 328 0 1 0 640.0328 72Z"
                              fill="#66B1E8"
                              stroke="#C4C4C4"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M-45 -5l54.5 0l0 46l-54.5 0Z"
                              fill="rgb(0,0,0)"
                              fill-opacity="0"
                              stroke="#ccc"
                              stroke-width="0"
                              transform="translate(640 382)"
                            />
                            <path
                              d="M-4.5 0l9 0l0 16l-9 0Z"
                              fill="none"
                              transform="translate(640 382)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:12px;font-family:'Open Sans', sans-serif;font-weight:400;"
                              text-anchor="middle"
                              transform="translate(640 382)"
                              xml:space="preserve"
                              y="8"
                            >
                              Rogue APs
                            </text>
                            <path
                              d="M-3.5 20l7 0l0 16l-7 0Z"
                              fill="none"
                              transform="translate(640 382)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#808284"
                              style="font-size:10px;font-family:'Open Sans', sans-serif;font-weight:400;"
                              text-anchor="middle"
                              transform="translate(640 382)"
                              y="28"
                            >
                              Unknown
                            </text>
                          </g>
                        </svg>
                      </div>
                      <div
                        class=""
                      />
                      <object
                        class="size-sensor-object"
                        data="about:blank"
                        style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
                        tabindex="-1"
                        type="text/html"
                      />
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="c3"
                      width="1280"
                    >
                      Enable rogue AP detection
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="resize-triggers"
              >
                <div
                  class="expand-trigger"
                >
                  <div
                    style="width: 1281px; height: 801px;"
                  />
                </div>
                <div
                  class="contract-trigger"
                />
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="height: 200px;"
            >
              <div
                style="overflow: visible; height: 0px; width: 0px;"
              >
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      _echarts_instance_="ec_mock"
                      class="echarts-for-react "
                      size-sensor-id="9"
                      style="height: 770px; width: 1280px; position: relative;"
                    >
                      <div
                        style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
                      >
                        <svg
                          baseProfile="full"
                          height="800"
                          style="position:absolute;left:0;top:0;user-select:none"
                          version="1.1"
                          width="1280"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <rect
                            fill="none"
                            fill-opacity="1"
                            height="800"
                            id="0"
                            width="1280"
                            x="0"
                            y="0"
                          />
                          <g>
                            <path
                              d="M640 32A368 368 0 1 1 639.9632 32M640 88A312 312 0 1 0 640.0312 88Z"
                              fill="#66B1E8"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M-45 -5l56.5 0l0 50l-56.5 0Z"
                              fill="rgb(0,0,0)"
                              fill-opacity="0"
                              stroke="#ccc"
                              stroke-width="0"
                              transform="translate(640 380)"
                            />
                            <path
                              d="M-6.5 0l13 0l0 16l-13 0Z"
                              fill="none"
                              transform="translate(640 380)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:12px;font-family:'Open Sans', sans-serif;font-weight:400;"
                              text-anchor="middle"
                              transform="translate(640 380)"
                              xml:space="preserve"
                              y="8"
                            >
                              Rx PHY Errors
                            </text>
                            <path
                              d="M-1 20l2 0l0 20l-2 0Z"
                              fill="none"
                              transform="translate(640 380)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:16px;font-family:'Montserrat', sans-serif;font-weight:600;"
                              text-anchor="middle"
                              transform="translate(640 380)"
                              y="30"
                            >
                              10
                            </text>
                          </g>
                        </svg>
                      </div>
                      <div
                        class=""
                      />
                      <object
                        class="size-sensor-object"
                        data="about:blank"
                        style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
                        tabindex="-1"
                        type="text/html"
                      />
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="c3"
                      width="1280"
                    >
                      00:00:00:00:00:00 has the highest Rx PHY errors
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="resize-triggers"
              >
                <div
                  class="expand-trigger"
                >
                  <div
                    style="width: 1281px; height: 801px;"
                  />
                </div>
                <div
                  class="contract-trigger"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkImpact should match snapshot 1`] = `
<DocumentFragment>
  .c1 {
  height: 100%;
  width: 100%;
}

.c1 .ant-card {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 8px;
}

.c1 .ant-card-head {
  padding: 0;
  border-bottom: none;
  min-height: 0;
  margin-bottom: 10px;
}

.c1 .ant-card-head-title {
  padding: 0;
}

.c1 .ant-card-head-title .ant-space .ant-space-item:last-child {
  line-height: 0;
}

.c1 .ant-card-head-wrapper {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c1 .ant-card-extra {
  padding: 0;
}

.c1 .ant-card-body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c2 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-headline-4-font-weight-bold);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c3 {
  width: 1280px;
  word-break: break-word;
  text-align: center;
  margin-block-start: 5px;
  padding: 0px calc(1280px * 0.18);
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-subtitle-6-font-size);
  line-height: var(--acx-subtitle-6-line-height);
  font-weight: var(--acx-subtitle-6-font-weight);
}

.c0 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
      type="no-border"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              <div
                class="c2"
              >
                Network Impact
              </div>
            </div>
            <div
              class="ant-card-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              />
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            class="ant-row"
          >
            <div
              class="ant-col ant-col-6"
              style="height: 200px;"
            >
              <div
                style="overflow: visible; height: 0px; width: 0px;"
              >
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      _echarts_instance_="ec_mock"
                      class="echarts-for-react "
                      size-sensor-id="1"
                      style="height: 770px; width: 1280px; position: relative;"
                    >
                      <div
                        style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
                      >
                        <svg
                          baseProfile="full"
                          height="800"
                          style="position:absolute;left:0;top:0;user-select:none"
                          version="1.1"
                          width="1280"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <rect
                            fill="none"
                            fill-opacity="1"
                            height="800"
                            id="0"
                            width="1280"
                            x="0"
                            y="0"
                          />
                          <g>
                            <path
                              d="M640 32A368 368 0 1 1 321.3027 584L369.8001 556A312 312 0 1 0 640 88Z"
                              fill="#66B1E8"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M321.3027 584A368 368 0 0 1 640 32L640 88A312 312 0 0 0 369.8001 556Z"
                              fill="#EC7100"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M-45 -5l52 0l0 26l-52 0Z"
                              fill="rgb(0,0,0)"
                              fill-opacity="0"
                              stroke="#ccc"
                              stroke-width="0"
                              transform="translate(640 392)"
                            />
                            <path
                              d="M-2 0l4 0l0 16l-4 0Z"
                              fill="none"
                              transform="translate(640 392)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:12px;font-family:'Open Sans', sans-serif;font-weight:400;"
                              text-anchor="middle"
                              transform="translate(640 392)"
                              y="8"
                            >
                              WLAN
                            </text>
                          </g>
                        </svg>
                      </div>
                      <div
                        class=""
                      />
                      <object
                        class="size-sensor-object"
                        data="about:blank"
                        style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
                        tabindex="-1"
                        type="text/html"
                      />
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="c3"
                      width="1280"
                    >
                      This incident impacted 2 WLANs
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="resize-triggers"
              >
                <div
                  class="expand-trigger"
                >
                  <div
                    style="width: 1281px; height: 801px;"
                  />
                </div>
                <div
                  class="contract-trigger"
                />
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="height: 200px;"
            >
              <div
                style="overflow: visible; height: 0px; width: 0px;"
              >
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      _echarts_instance_="ec_mock"
                      class="echarts-for-react "
                      size-sensor-id="2"
                      style="height: 770px; width: 1280px; position: relative;"
                    >
                      <div
                        style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
                      >
                        <svg
                          baseProfile="full"
                          height="800"
                          style="position:absolute;left:0;top:0;user-select:none"
                          version="1.1"
                          width="1280"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <rect
                            fill="none"
                            fill-opacity="1"
                            height="800"
                            id="0"
                            width="1280"
                            x="0"
                            y="0"
                          />
                          <g>
                            <path
                              d="M640 32A368 368 0 1 1 639.9632 32M640 88A312 312 0 1 0 640.0312 88Z"
                              fill="#66B1E8"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M-45 -5l53 0l0 26l-53 0Z"
                              fill="rgb(0,0,0)"
                              fill-opacity="0"
                              stroke="#ccc"
                              stroke-width="0"
                              transform="translate(640 392)"
                            />
                            <path
                              d="M-3 0l6 0l0 16l-6 0Z"
                              fill="none"
                              transform="translate(640 392)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:12px;font-family:'Open Sans', sans-serif;font-weight:400;"
                              text-anchor="middle"
                              transform="translate(640 392)"
                              y="8"
                            >
                              Reason
                            </text>
                          </g>
                        </svg>
                      </div>
                      <div
                        class=""
                      />
                      <object
                        class="size-sensor-object"
                        data="about:blank"
                        style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
                        tabindex="-1"
                        type="text/html"
                      />
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="c3"
                      width="1280"
                    >
                      100% of failures caused by 'AAA Auth Failure'
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="resize-triggers"
              >
                <div
                  class="expand-trigger"
                >
                  <div
                    style="width: 1281px; height: 801px;"
                  />
                </div>
                <div
                  class="contract-trigger"
                />
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="height: 200px;"
            >
              <div
                style="overflow: visible; height: 0px; width: 0px;"
              >
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      _echarts_instance_="ec_mock"
                      class="echarts-for-react "
                      size-sensor-id="3"
                      style="height: 770px; width: 1280px; position: relative;"
                    >
                      <div
                        style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
                      >
                        <svg
                          baseProfile="full"
                          height="800"
                          style="position:absolute;left:0;top:0;user-select:none"
                          version="1.1"
                          width="1280"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <rect
                            fill="none"
                            fill-opacity="1"
                            height="800"
                            id="0"
                            width="1280"
                            x="0"
                            y="0"
                          />
                          <g>
                            <path
                              d="M640 32A368 368 0 1 1 640 768L640 712A312 312 0 0 0 640 88Z"
                              fill="#66B1E8"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M640 768A368 368 0 1 1 640 32L640 88A312 312 0 0 0 640 712Z"
                              fill="#EC7100"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M-45 -5l59.5 0l0 26l-59.5 0Z"
                              fill="rgb(0,0,0)"
                              fill-opacity="0"
                              stroke="#ccc"
                              stroke-width="0"
                              transform="translate(640 392)"
                            />
                            <path
                              d="M-9.5 0l19 0l0 16l-19 0Z"
                              fill="none"
                              transform="translate(640 392)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:12px;font-family:'Open Sans', sans-serif;font-weight:400;"
                              text-anchor="middle"
                              transform="translate(640 392)"
                              xml:space="preserve"
                              y="8"
                            >
                              Client Manufacturer
                            </text>
                          </g>
                        </svg>
                      </div>
                      <div
                        class=""
                      />
                      <object
                        class="size-sensor-object"
                        data="about:blank"
                        style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
                        tabindex="-1"
                        type="text/html"
                      />
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="c3"
                      width="1280"
                    >
                      This incident impacted 2 client manufacturers
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="resize-triggers"
              >
                <div
                  class="expand-trigger"
                >
                  <div
                    style="width: 1281px; height: 801px;"
                  />
                </div>
                <div
                  class="contract-trigger"
                />
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="height: 200px;"
            >
              <div
                style="overflow: visible; height: 0px; width: 0px;"
              >
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      _echarts_instance_="ec_mock"
                      class="echarts-for-react "
                      size-sensor-id="4"
                      style="height: 770px; width: 1280px; position: relative;"
                    >
                      <div
                        style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
                      >
                        <svg
                          baseProfile="full"
                          height="800"
                          style="position:absolute;left:0;top:0;user-select:none"
                          version="1.1"
                          width="1280"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <rect
                            fill="none"
                            fill-opacity="1"
                            height="800"
                            id="0"
                            width="1280"
                            x="0"
                            y="0"
                          />
                          <g>
                            <path
                              d="M640 32A368 368 0 1 1 640 768L640 712A312 312 0 0 0 640 88Z"
                              fill="#66B1E8"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M640 768A368 368 0 1 1 640 32L640 88A312 312 0 0 0 640 712Z"
                              fill="#EC7100"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M-45 -5l52.5 0l0 26l-52.5 0Z"
                              fill="rgb(0,0,0)"
                              fill-opacity="0"
                              stroke="#ccc"
                              stroke-width="0"
                              transform="translate(640 392)"
                            />
                            <path
                              d="M-2.5 0l5 0l0 16l-5 0Z"
                              fill="none"
                              transform="translate(640 392)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:12px;font-family:'Open Sans', sans-serif;font-weight:400;"
                              text-anchor="middle"
                              transform="translate(640 392)"
                              y="8"
                            >
                              Radio
                            </text>
                          </g>
                        </svg>
                      </div>
                      <div
                        class=""
                      />
                      <object
                        class="size-sensor-object"
                        data="about:blank"
                        style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
                        tabindex="-1"
                        type="text/html"
                      />
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="c3"
                      width="1280"
                    >
                      This incident impacted 2 radios
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="resize-triggers"
              >
                <div
                  class="expand-trigger"
                >
                  <div
                    style="width: 1281px; height: 801px;"
                  />
                </div>
                <div
                  class="contract-trigger"
                />
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="height: 200px;"
            >
              <div
                style="overflow: visible; height: 0px; width: 0px;"
              >
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      _echarts_instance_="ec_mock"
                      class="echarts-for-react "
                      size-sensor-id="5"
                      style="height: 770px; width: 1280px; position: relative;"
                    >
                      <div
                        style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
                      >
                        <svg
                          baseProfile="full"
                          height="800"
                          style="position:absolute;left:0;top:0;user-select:none"
                          version="1.1"
                          width="1280"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <rect
                            fill="none"
                            fill-opacity="1"
                            height="800"
                            id="0"
                            width="1280"
                            x="0"
                            y="0"
                          />
                          <g>
                            <path
                              d="M640 32A368 368 0 1 1 640 768L640 712A312 312 0 0 0 640 88Z"
                              fill="#66B1E8"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M640 768A368 368 0 0 1 290.0112 286.2817L343.2704 303.5867A312 312 0 0 0 640 712Z"
                              fill="#EC7100"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M290.0112 286.2817A368 368 0 0 1 423.695 102.2817L456.611 147.5867A312 312 0 0 0 343.2704 303.5867Z"
                              fill="#F9C34B"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M423.695 102.2817A368 368 0 0 1 640 32L640 88A312 312 0 0 0 456.611 147.5867Z"
                              fill="#F095FF"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M-45 -5l60 0l0 50l-60 0Z"
                              fill="rgb(0,0,0)"
                              fill-opacity="0"
                              stroke="#ccc"
                              stroke-width="0"
                              transform="translate(640 380)"
                            />
                            <path
                              d="M-10 0l20 0l0 16l-20 0Z"
                              fill="none"
                              transform="translate(640 380)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:12px;font-family:'Open Sans', sans-serif;font-weight:400;"
                              text-anchor="middle"
                              transform="translate(640 380)"
                              xml:space="preserve"
                              y="8"
                            >
                              Average Airtime Busy
                            </text>
                            <path
                              d="M-1.5 20l3 0l0 20l-3 0Z"
                              fill="none"
                              transform="translate(640 380)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:16px;font-family:'Montserrat', sans-serif;font-weight:600;"
                              text-anchor="middle"
                              transform="translate(640 380)"
                              y="30"
                            >
                              50%
                            </text>
                          </g>
                        </svg>
                      </div>
                      <div
                        class=""
                      />
                      <object
                        class="size-sensor-object"
                        data="about:blank"
                        style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
                        tabindex="-1"
                        type="text/html"
                      />
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="c3"
                      width="1280"
                    >
                      Peak airtime busy was 65%
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="resize-triggers"
              >
                <div
                  class="expand-trigger"
                >
                  <div
                    style="width: 1281px; height: 801px;"
                  />
                </div>
                <div
                  class="contract-trigger"
                />
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="height: 200px;"
            >
              <div
                style="overflow: visible; height: 0px; width: 0px;"
              >
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      _echarts_instance_="ec_mock"
                      class="echarts-for-react "
                      size-sensor-id="6"
                      style="height: 770px; width: 1280px; position: relative;"
                    >
                      <div
                        style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
                      >
                        <svg
                          baseProfile="full"
                          height="800"
                          style="position:absolute;left:0;top:0;user-select:none"
                          version="1.1"
                          width="1280"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <rect
                            fill="none"
                            fill-opacity="1"
                            height="800"
                            id="0"
                            width="1280"
                            x="0"
                            y="0"
                          />
                          <g>
                            <path
                              d="M640 32A368 368 0 1 1 640 768L640 712A312 312 0 0 0 640 88Z"
                              fill="#66B1E8"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M640 768A368 368 0 0 1 272 400L328 400A312 312 0 0 0 640 712Z"
                              fill="#EC7100"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M272 400A368 368 0 0 1 640 32L640 88A312 312 0 0 0 328 400Z"
                              fill="#F9C34B"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M-45 -5l67 0l0 50l-67 0Z"
                              fill="rgb(0,0,0)"
                              fill-opacity="0"
                              stroke="#ccc"
                              stroke-width="0"
                              transform="translate(640 380)"
                            />
                            <path
                              d="M-17 0l34 0l0 16l-34 0Z"
                              fill="none"
                              transform="translate(640 380)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:12px;font-family:'Open Sans', sans-serif;font-weight:400;"
                              text-anchor="middle"
                              transform="translate(640 380)"
                              xml:space="preserve"
                              y="8"
                            >
                              Average Peak No. of Clients per AP
                            </text>
                            <path
                              d="M-1 20l2 0l0 20l-2 0Z"
                              fill="none"
                              transform="translate(640 380)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:16px;font-family:'Montserrat', sans-serif;font-weight:600;"
                              text-anchor="middle"
                              transform="translate(640 380)"
                              y="30"
                            >
                              28
                            </text>
                          </g>
                        </svg>
                      </div>
                      <div
                        class=""
                      />
                      <object
                        class="size-sensor-object"
                        data="about:blank"
                        style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
                        tabindex="-1"
                        type="text/html"
                      />
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="c3"
                      width="1280"
                    >
                      Peak number of clients per AP was 60
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="resize-triggers"
              >
                <div
                  class="expand-trigger"
                >
                  <div
                    style="width: 1281px; height: 801px;"
                  />
                </div>
                <div
                  class="contract-trigger"
                />
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="height: 200px;"
            >
              <div
                style="overflow: visible; height: 0px; width: 0px;"
              >
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      _echarts_instance_="ec_mock"
                      class="echarts-for-react "
                      size-sensor-id="7"
                      style="height: 770px; width: 1280px; position: relative;"
                    >
                      <div
                        style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
                      >
                        <svg
                          baseProfile="full"
                          height="800"
                          style="position:absolute;left:0;top:0;user-select:none"
                          version="1.1"
                          width="1280"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <rect
                            fill="none"
                            fill-opacity="1"
                            height="800"
                            id="0"
                            width="1280"
                            x="0"
                            y="0"
                          />
                          <g>
                            <path
                              d="M640 32A368 368 0 1 1 640 768L640 712A312 312 0 0 0 640 88Z"
                              fill="#66B1E8"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M640 768A368 368 0 0 1 272 400L328 400A312 312 0 0 0 640 712Z"
                              fill="#EC7100"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M272 400A368 368 0 0 1 640 32L640 88A312 312 0 0 0 328 400Z"
                              fill="#F9C34B"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M-45 -5l67 0l0 50l-67 0Z"
                              fill="rgb(0,0,0)"
                              fill-opacity="0"
                              stroke="#ccc"
                              stroke-width="0"
                              transform="translate(640 380)"
                            />
                            <path
                              d="M-17 0l34 0l0 16l-34 0Z"
                              fill="none"
                              transform="translate(640 380)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:12px;font-family:'Open Sans', sans-serif;font-weight:400;"
                              text-anchor="middle"
                              transform="translate(640 380)"
                              xml:space="preserve"
                              y="8"
                            >
                              Average Peak No. of Clients per AP
                            </text>
                            <path
                              d="M-1 20l2 0l0 20l-2 0Z"
                              fill="none"
                              transform="translate(640 380)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:16px;font-family:'Montserrat', sans-serif;font-weight:600;"
                              text-anchor="middle"
                              transform="translate(640 380)"
                              y="30"
                            >
                              28
                            </text>
                          </g>
                        </svg>
                      </div>
                      <div
                        class=""
                      />
                      <object
                        class="size-sensor-object"
                        data="about:blank"
                        style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
                        tabindex="-1"
                        type="text/html"
                      />
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="c3"
                      width="1280"
                    >
                      Peak number of clients per AP was 60
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="resize-triggers"
              >
                <div
                  class="expand-trigger"
                >
                  <div
                    style="width: 1281px; height: 801px;"
                  />
                </div>
                <div
                  class="contract-trigger"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
